Se trabajo en el menu y se inicio la integracion de search-builds

--- a/static/gencoui/css/rndr-style.css
+++ b/static/gencoui/css/rndr-style.css
@@ -279,3 +279,10 @@
 		    color: #217dbb; 
 		    text-decoration: underline;
 		}
+
+		.rndr-env-odd {
+		  color: red;
+		}
+		.rndr-env-even {
+		  color: blue;
+		}
