--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -11,6 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="stylesheet" href="{% static 'gencoui/css/bootstrap.min.flatly.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'gencoui/css/bootstrap.min.superhero.css' %}"> -->
     <!-- <link rel="stylesheet" href="{% static 'gencoui/css/bootstrap.min.darkly.css' %}"> -->
     <!-- <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css"> -->
 
