--- a/templates/gencoui/rndr_builds_search.html
+++ b/templates/gencoui/rndr_builds_search.html
@@ -15,7 +15,7 @@
 
 		<div>
 
-			<table class="table table-hover">
+			<table class="table table-hover" style="color: #ffffff">
 			  <!-- <thead>
 			    <tr>
 			      <th>#</th>
@@ -25,6 +25,12 @@
 			    </tr>
 			  </thead> -->
 			  <tbody>
+			    <tr>
+			      <td>1</td>
+			      <td>c</td>
+			      <td>c</td>
+			      <td>c</td>
+			    </tr>
 			    <tr>
 			      <td>1</td>
 			      <td>c</td>
