--- a/templates/gencoui/rndr_builds_search.html
+++ b/templates/gencoui/rndr_builds_search.html
@@ -8,7 +8,10 @@
 		 	<div class="input-group">
 			    <input type="text" class="form-control" placeholder="Find Builds">
 			    <span class="input-group-btn">
-			      <button class="btn btn-default btn-sm" type="button"><i class="glyphicon glyphicon-search"></i></button>
+			      <button class="btn btn-default btn-sm" type="button">
+			      	<i class="glyphicon glyphicon-search"></i>
+			      	Search
+			      </button>
 			    </span>
 		  	</div>
 		</div>
@@ -25,6 +28,18 @@
 			    </tr>
 			  </thead> -->
 			  <tbody>
+			    <tr>
+			      <td>1</td>
+			      <td>c</td>
+			      <td>c</td>
+			      <td>c</td>
+			    </tr>
+			    <tr>
+			      <td>1</td>
+			      <td>c</td>
+			      <td>c</td>
+			      <td>c</td>
+			    </tr>
 			    <tr>
 			      <td>1</td>
 			      <td>c</td>
