--- a/templates/gencoui/rndr_env.html
+++ b/templates/gencoui/rndr_env.html
@@ -16,9 +16,8 @@
 							
 							<div id="jstreeEnvs">
 				    		</div>
-				    		<div style="margin-bottom: 15px; padding-top:10px">
-						    	<p style="display:inline">Add </p>
-							    <a class="btn icon-btn btn-default" role="button" data-toggle="modal" data-target="#env-add-modal" data-placement="bottom" data-tt="tooltip" title="Create Environment" ng-click="new()">
+				    		<div style="margin-bottom: 15px; padding-top:10px; text-align:center">
+							    <a class="btn icon-btn btn-default" role="button"  data-placement="bottom" data-tt="tooltip" title="Create Environment" ng-click="new()">
 										<span class="glyphicon btn-glyphicon glyphicon-plus img-circle" ></span>					
 								</a>	
 						    </div>
@@ -34,7 +33,7 @@
 							  </thead> -->
 							  <tbody>
 							  	{% verbatim %}
-
+							  	
 							    <tr ng-repeat="env in envs">
 							      <td ng-click="load_env(env.id_entorno)">
 							      	
@@ -89,9 +88,14 @@
 										<div class="rndr_title" style="display:inline">
 											<!-- <image src="{% static 'gencoui/img/gwt.jpg' %}" width="32px" height="32px"></image> -->
 											<p style="font-size:14px; display:inline" ng-bind="nombre"></p>
-										</div>										
-										<img class="rndr-scale" src="{% static 'gencoui/img/rndr/build.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline; float: right"></img>
-										<img class="rndr-scale" src="{% static 'gencoui/img/rndr/design.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline; float: right"></img>
+										</div>
+										<a href="{% url 'gencoui:module' 'builds' %}" style="display:inline;">
+											<img class="rndr-scale" src="{% static 'gencoui/img/rndr/build_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline; float: right">
+											</img>
+										</a>									
+										<a href="{% url 'gencoui:module' 'editor' %}" style="display:inline;">
+											<img class="rndr-scale" src="{% static 'gencoui/img/rndr/design_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline; float: right"></img>
+										</a>										
 										<div class="rndr_env_desc">
 
 											<!-- <image src="{% static 'gencoui/img/gwt.jpg' %}" width="32px" height="32px"></image> -->
