--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,6 +6,15 @@
 	<link rel="stylesheet" href="{% static 'gencoui/css/rndr-style-dev.css' %}">
 	<link rel="stylesheet" href="{% static 'gencoui/css/rndr-style.css' %}">
 {% endblock %}
+{% block extrajs %}
+   <script type="text/javascript">
+        $(document).ready(function() {
+             window.onload = function() {
+             $("#id_username").focus();
+            };  
+        }); 
+        </script> 
+{% endblock %}
 {% block content %}
 <div class="container-fluid" style="margin-top:70px; height:100%">
 
@@ -22,6 +31,9 @@
 					<h3>Login</h3>
 					<form method="post">
 						{% csrf_token %}
+						<div style="font-size:12px; color:#e74c3c">
+							{{ form.non_field_errors }}	
+						</div>						
 						<div class="form-group">
 								{{ form.username.errors }}
 							    {{ form.username.label_tag }}
