--- a/templates/gencoui/menu.html
+++ b/templates/gencoui/menu.html
@@ -4,7 +4,7 @@
 
 {% block extrastyle %}
   <link rel="stylesheet" href="{% static 'gencoui/jstree/themes/default/style.min.css' %}" />
-  <link rel="stylesheet" href="{% static 'gencoui/css/rndr-style-dev.css' %}">
+  <!-- <link rel="stylesheet" href="{% static 'gencoui/css/rndr-style-dev.css' %}"> -->
   <link rel="stylesheet" href="{% static 'gencoui/css/rndr-style.css' %}">
   <style type="text/css">
     body {
@@ -22,6 +22,7 @@
 {% block extrajs %}
   <script src="{% static 'gencoui/js/angular.min.js' %}"></script>
   <script src="{% static 'gencoui/js/angular-resource.min.js' %}"></script>
+  
   <script type="text/javascript">
     $(function () {
       $('[data-tt="tooltip"]').tooltip()
@@ -40,7 +41,7 @@
 {% endblock %}
 
 {% block extrahead %}
-{% include "gencoui/rndr_env_header.html" %}
+
 {% endblock %}
 
 
