--- a/templates/gencoui/rndr_builds_search.html
+++ b/templates/gencoui/rndr_builds_search.html
@@ -18,7 +18,7 @@
 
 		<div>
 
-			<table class="table table-hover" style="color: #ffffff">
+			<table class="table table-hover" style="color: #6d758c;">
 			  <!-- <thead>
 			    <tr>
 			      <th>#</th>
