--- a/templates/gencoui/rndr_env.html
+++ b/templates/gencoui/rndr_env.html
@@ -1,5 +1,17 @@
 {% load staticfiles %}
 {% load static %}
+{% load placeholder %}
+{% load autofocus %}
+{% block extrajs %}
+	<script src="{% static 'gencoui/js/rndr_module/app_env.js' %}"></script>
+	<script src="{% static 'gencoui/js/rndr_module/service_env.js' %}"></script>
+	<script src="{% static 'gencoui/js/rndr_module/service_lang.js' %}"></script>
+	<script type="text/javascript">
+		$(function () {
+		  $('[data-tt="tooltip"]').tooltip()
+		});
+	</script>
+{% endblock %}
 {% block content %}
 <div id="ctrl_env" ng-app="app_env" ng-controller="ctrl_env">
 			    
@@ -11,12 +23,12 @@
 						</div>						
 					</div>
 					<div class="row">
-						<div class="col-xs-12 col-sm-5">
+						<div class="col-xs-12 col-sm-6">
 						<div style="padding-left: 5%; padding-right:15px; background-color:#eee; height:300px;">
 							
 							<div id="jstreeEnvs">
 				    		</div>
-				    		<div style="margin-bottom: 15px; padding-top:10px; text-align:center">
+				    		<div style="margin-bottom: 15px; padding-top:10px;">
 							    <a class="btn icon-btn btn-default" role="button"  data-placement="bottom" data-tt="tooltip" title="Create Environment" ng-click="new()">
 										<span class="glyphicon btn-glyphicon glyphicon-plus img-circle" ></span>					
 								</a>	
@@ -43,19 +55,7 @@
 								   	<p ng-if="$even" style="color:#8c8c8c;display:inline">{{env.nombre}}</p>
 							      </td>
 							      <td width="40px">
-							      	<div class="dropdown">
-									  <button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-									    Options
-									    <span class="caret"></span>
-									  </button>
-									  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-									    <li><a href="#">Edit</a></li>
-									    <li><a href="#">Design</a></li>
-									    <li><a href="#">Build</a></li>
-									    <li role="separator" class="divider"></li>
-									    <li><a href="#">Remove</a></li>
-									  </ul>
-									</div>
+							      	
 							      </td>
 							    </tr>
 							    {% endverbatim %}
@@ -76,12 +76,13 @@
 							
 						</div>	
 						</div>
-						<div class="col-xs-12 col-sm-7" style="">
+						<div class="col-xs-12 col-sm-6" style="">
 							<div style="height:300px;padding-top: 15px; padding-right: 15px; overflow:auto;">
 
 								<div class="panel panel-default" style="border:none; background-color:transparent" ng-if="envs.length > 0">
 						
 									<div class="" style=""> 
+
 										{% verbatim %}
 										<img ng-src="{{icono}}" onerror="this.onerror=null; this.src='/static/gencoui/img/rndr/noimage.jpg'" width="32px" height="32px"/>
 										{% endverbatim %}
@@ -89,13 +90,56 @@
 											<!-- <image src="{% static 'gencoui/img/gwt.jpg' %}" width="32px" height="32px"></image> -->
 											<p style="font-size:14px; display:inline" ng-bind="nombre"></p>
 										</div>
-										<a href="{% url 'gencoui:module' 'builds' %}" style="display:inline;">
+										
+										<div class="dropdown" style="display:inline; float: right">
+										  <button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+										    Options
+										    <span class="caret"></span>
+										  </button>
+										  <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+										    <li>
+										    	<a href="#" ng-click="edit()">				
+										    	<img src="{% static 'gencoui/img/rndr/editenv_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline;">
+												</img>
+												Edit
+										    	</a>
+										    </li>
+										    <li>
+										    	<a id="lnkToBuildsFull" href="{% url 'gencoui:module' 'builds' %}">						    	
+										    		<img src="{% static 'gencoui/img/rndr/build_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline;">
+													</img>
+													Templates
+												</a>
+											</li>
+										    <li>
+										    	<a id="lnkToEditorFull" href="{% url 'gencoui:module' 'editor' %}">
+										    		<img src="{% static 'gencoui/img/rndr/design_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline;">
+													</img>	
+													Build
+										    	</a>
+										    </li>
+										    <li role="separator" class="divider"></li>
+										    <li>
+										    	<a href="#">
+										    		<img src="{% static 'gencoui/img/rndr/removeenv
+										    		_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline;">
+													</img>
+										    		Remove
+										    	</a>
+										    </li>
+										  </ul>
+										</div>
+
+
+										<!-- <a id="lnkToBuildsFull" href="{% url 'gencoui:module' 'builds' %}" style="display:inline;">
 											<img class="rndr-scale" src="{% static 'gencoui/img/rndr/build_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline; float: right">
 											</img>
 										</a>									
-										<a href="{% url 'gencoui:module' 'editor' %}" style="display:inline;">
+										
+										<a id="lnkToEditorFull" href="{% url 'gencoui:module' 'editor' %}" style="display:inline;">
 											<img class="rndr-scale" src="{% static 'gencoui/img/rndr/design_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline; float: right"></img>
-										</a>										
+										 --></a>										
+										
 										<div class="rndr_env_desc">
 
 											<!-- <image src="{% static 'gencoui/img/gwt.jpg' %}" width="32px" height="32px"></image> -->
@@ -188,7 +232,7 @@
    
 			{{ form_add_env }}
 
-				<img id="imgEnvIcon" src="/static/gencoui/img/rndr/noimage.jpg" width="32px" height="32px" style="margin: 8px"/>
+				<img id="imgEnvIconAdd" src="/static/gencoui/img/rndr/noimage.jpg" width="32px" height="32px" style="margin: 8px"/>
 
 				<div>
 			
@@ -196,7 +240,7 @@
 					<div class="modal-footer">							
 						<div class="checkbox" ng-repeat="icon in langIconos" style="display:inline;margin: 8px">
 
-							<img class="rndr-scale" ng-src="{{icon.upload}}" width="32px" height="32px" ng-click="setEnvIcon(icon)"/>
+							<img class="rndr-scale" ng-src="{{icon.upload}}" width="32px" height="32px" ng-click="setEnvIconAdd(icon)"/>
 							
 						</div>
 					</div>	
@@ -232,7 +276,20 @@
           	<div class="modal-body">
    
 			{{ form_add_env }}
+				<img id="imgEnvIconEdit" src="/static/gencoui/img/rndr/noimage.jpg" width="32px" height="32px" style="margin: 8px"/>
 
+				<div>
+			
+					{% verbatim %}
+					<div class="modal-footer">							
+						<div class="checkbox" ng-repeat="icon in langIconos" style="display:inline;margin: 8px">
+
+							<img class="rndr-scale" ng-src="{{icon.upload}}" width="32px" height="32px" ng-click="setEnvIconEdit(icon)"/>
+							
+						</div>
+					</div>	
+					{% endverbatim %}	
+				</div>
           	</div>
           	<div class="modal-footer">
           		<a class="btn icon-btn btn-default" ng-click="update()">
