--- a/templates/gencoui/rndr_env.html
+++ b/templates/gencoui/rndr_env.html
@@ -49,7 +49,7 @@
 							    <tr ng-repeat="env in envs">
 							      <td ng-click="load_env(env.id_entorno)">
 							      	
-							      	<img ng-src="{{env.icon.upload}}" onerror="this.onerror=null; this.src='/static/gencoui/img/rndr/noimage.jpg'" width="24px" height="24px"/>
+							      	<img  ng-src="{{env.icon.upload}}" onerror="this.onerror=null; this.src='/static/gencoui/img/rndr/noimage.jpg'" width="24px" height="24px"/>
 						      		
 								    <p ng-if="$odd" style="color:#6791bb;display:inline">{{env.nombre}}</p>
 								   	<p ng-if="$even" style="color:#8c8c8c;display:inline">{{env.nombre}}</p>
@@ -79,12 +79,12 @@
 						<div class="col-xs-12 col-sm-6" style="">
 							<div style="height:300px;padding-top: 15px; padding-right: 15px; overflow:auto;">
 
-								<div class="panel panel-default" style="border:none; background-color:transparent" ng-if="envs.length > 0">
+								<div class="panel panel-default" style="border:none; background-color:transparent" >
 						
 									<div class="" style=""> 
 
 										{% verbatim %}
-										<img ng-src="{{icono}}" onerror="this.onerror=null; this.src='/static/gencoui/img/rndr/noimage.jpg'" width="32px" height="32px"/>
+										<img ng-src="{{icono}}" onerror="this.onerror=null; this.src='/static/gencoui/img/rndr/noimage.jpg'" width="32px" height="32px"/ ng-if="nombre!=''">
 										{% endverbatim %}
 										<div class="rndr_title" style="display:inline">
 											<!-- <image src="{% static 'gencoui/img/gwt.jpg' %}" width="32px" height="32px"></image> -->
@@ -92,7 +92,7 @@
 										</div>
 										
 										<div class="dropdown" style="display:inline; float: right">
-										  <button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+										  <button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropEnvOptions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" disabled="true">
 										    Options
 										    <span class="caret"></span>
 										  </button>
@@ -105,24 +105,23 @@
 										    	</a>
 										    </li>
 										    <li>
-										    	<a id="lnkToBuildsFull" href="{% url 'gencoui:module' 'builds' %}">						    	
-										    		<img src="{% static 'gencoui/img/rndr/build_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline;">
-													</img>
-													Templates
-												</a>
-											</li>
-										    <li>
-										    	<a id="lnkToEditorFull" href="{% url 'gencoui:module' 'editor' %}">
+										    	<a id="lnkToEditorFull" href="#">
 										    		<img src="{% static 'gencoui/img/rndr/design_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline;">
 													</img>	
-													Build
+													Templates
 										    	</a>
 										    </li>
+										    <li>
+										    	<a id="lnkToBuildsFull" href="#">						    	
+										    		<img src="{% static 'gencoui/img/rndr/build_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline;">
+													</img>
+													Build
+												</a>
+											</li>
 										    <li role="separator" class="divider"></li>
 										    <li>
-										    	<a href="#">
-										    		<img src="{% static 'gencoui/img/rndr/removeenv
-										    		_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline;">
+										    	<a href="#" ng-click="remove()">
+										    		<img src="{% static 'gencoui/img/rndr/removeenv_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline;">
 													</img>
 										    		Remove
 										    	</a>
@@ -131,19 +130,12 @@
 										</div>
 
 
-										<!-- <a id="lnkToBuildsFull" href="{% url 'gencoui:module' 'builds' %}" style="display:inline;">
-											<img class="rndr-scale" src="{% static 'gencoui/img/rndr/build_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline; float: right">
-											</img>
-										</a>									
-										
-										<a id="lnkToEditorFull" href="{% url 'gencoui:module' 'editor' %}" style="display:inline;">
-											<img class="rndr-scale" src="{% static 'gencoui/img/rndr/design_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px" style="display:inline; float: right"></img>
-										 --></a>										
+																				
 										
 										<div class="rndr_env_desc">
 
 											<!-- <image src="{% static 'gencoui/img/gwt.jpg' %}" width="32px" height="32px"></image> -->
-											<p style="font-size:14px" ng-bind="descripcion"></p>
+											<p style="font-size:10px" ng-bind="descripcion"></p>
 										</div>
 										<table>
 							                <tr>
@@ -160,7 +152,7 @@
 							                </tr>
 						            	</table>
 										
-							  			<div style="padding: 10px;">
+							  			<div style="padding: 10px;" ng-if="langs.length>0">
 											<!-- <p style="display:inline;">Langs</p> -->
 											<p style="display:inline;">Langs</p>
 								  			<!-- <button style="display:inline;" type="button" class="btn btn-default btn-lg btn-circle-sm">
@@ -181,7 +173,10 @@
 											  	<tbody >
 											  		{% verbatim %}
 													<tr  ng-repeat="lang in langs">
-											      		<td>{{lang.lang.nombre}}</td>
+											      		<td>
+											      			<img  ng-src="{{lang.lang.icon.upload}}" onerror="this.onerror=null; this.src='/static/gencoui/img/rndr/noimage.jpg'" width="24px" height="24px" style="margin-right: 10px;"/>	
+											      			{{lang.lang.nombre}}
+											      		</td>
 											      		<!-- <td  width="15px">
 											      			<a href="#" class="list-group-item list-group-item-success">Types</a>	
 											      		</td> -->
@@ -218,7 +213,7 @@
 
 
 <!-- Modal Environments -->
-<div class="modal fade" id="env-add-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="env-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 
     <div class="modal-dialog">
 
@@ -230,31 +225,37 @@
           <!-- <div class="arrow-up"></div> -->
           	<div class="modal-body">
    
-			{{ form_add_env }}
+   	   				<form ng-submit="saveOrUpdate()">
+						{{ form_add_env }}
+						<img id="imgEnvIconAdd" src="/static/gencoui/img/rndr/noimage.jpg" width="32px" height="32px" style="margin: 8px"/>
 
-				<img id="imgEnvIconAdd" src="/static/gencoui/img/rndr/noimage.jpg" width="32px" height="32px" style="margin: 8px"/>
+						<div>
+					
+							{% verbatim %}
+							<div class="modal-footer">							
+								<div class="checkbox" ng-repeat="icon in langIconos" style="display:inline;margin: 8px">
 
-				<div>
-			
-					{% verbatim %}
-					<div class="modal-footer">							
-						<div class="checkbox" ng-repeat="icon in langIconos" style="display:inline;margin: 8px">
-
-							<img class="rndr-scale" ng-src="{{icon.upload}}" width="32px" height="32px" ng-click="setEnvIconAdd(icon)"/>
-							
+									<img class="rndr-scale" ng-src="{{icon.upload}}" width="32px" height="32px" ng-click="setEnvIcon(icon)"/>
+									
+								</div>
+							</div>	
+							{% endverbatim %}	
 						</div>
-					</div>	
-					{% endverbatim %}	
-				</div>
+						<button type="submit" hidden></button>
+					</form>			
 
           	</div>
           	<div class="modal-footer">
-          		<a class="btn icon-btn btn-default" ng-click="save()" data-placement="bottom"data-tt="tooltip" title="Save">
-					<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
-				</a>
-				<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
-						<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
-				</a>
+          		<div style="display:inline">
+	          		<a class="btn icon-btn btn-default" ng-click="saveOrUpdate()" data-placement="bottom"data-tt="tooltip" title="Save">
+						<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
+					</a>
+				</div>
+				<div style="display:inline">	
+					<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
+							<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
+					</a>
+				</div>	
           	</div>
 
         </div>
@@ -262,72 +263,52 @@
 </div>
           	
 
-<!-- Modal Environments -->
-<div class="modal fade" id="env-edit-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="info-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 
-    <div class="modal-dialog">
+    <div class="modal-dialog" >
 
-        <div class="modal-content">
+        <div class="modal-content" style="padding: 20px;margin: 20px 0;border-left-width: 20px;border-radius: 3px; border-left-color: #ce4844;">
 	        <div class="modal-header">
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		        <h4 class="modal-title">Edit Environment</h4>
-		    </div>
-          <!-- <div class="arrow-up"></div> -->
-          	<div class="modal-body">
-   
-			{{ form_add_env }}
-				<img id="imgEnvIconEdit" src="/static/gencoui/img/rndr/noimage.jpg" width="32px" height="32px" style="margin: 8px"/>
-
-				<div>
-			
-					{% verbatim %}
-					<div class="modal-footer">							
-						<div class="checkbox" ng-repeat="icon in langIconos" style="display:inline;margin: 8px">
-
-							<img class="rndr-scale" ng-src="{{icon.upload}}" width="32px" height="32px" ng-click="setEnvIconEdit(icon)"/>
-							
-						</div>
-					</div>	
-					{% endverbatim %}	
-				</div>
+		    	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
+	        	<h4 class="modal-title">Information</h4>
+		    </div>	     
+          	<div id="imConfirm" class="modal-body">
           	</div>
           	<div class="modal-footer">
-          		<a class="btn icon-btn btn-default" ng-click="update()">
-					<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
-				</a>
-				<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
-						<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
-				</a>
+				<div style="display:inline">
+					<a class="btn icon-btn btn-default"  data-dismiss="modal" data-placement="bottom"data-tt="tooltip" title="Close">
+							<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
+					</a>
+				</div>	
           	</div>
 
         </div>
     </div>
 </div>
 
-
-<!-- Modal Environments -->
-<div class="modal fade" id="env-remove-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="confirm-delete-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 
     <div class="modal-dialog">
 
-        <div class="modal-content">
+        <div class="modal-content" style="padding: 20px;margin: 20px 0;border-left-width: 20px;border-radius: 3px; border-left-color: #ffb612;">
 	        <div class="modal-header">
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		        <h4 class="modal-title">Edit Environment</h4>
-		    </div>
-          <!-- <div class="arrow-up"></div> -->
-          	<div class="modal-body">
-   
-			{{ form_add_env }}
+		    	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
+	        	<h4 class="modal-title">Confirm</h4>
+		    </div>	     
+          	<div id="tedmConfirm" class="modal-body">
 
           	</div>
           	<div class="modal-footer">
-          		<a class="btn icon-btn btn-default" ng-click="update()">
-					<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
-				</a>
-				<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
-						<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
-				</a>
+          		<div style="display:inline">
+	          		<a class="btn icon-btn btn-default" ng-click="confirm_delete()" data-placement="bottom"data-tt="tooltip" title="Save">
+						<span class="glyphicon btn-glyphicon glyphicon-ok img-circle" ></span>					
+					</a>
+				</div>
+				<div style="display:inline">
+					<a class="btn icon-btn btn-default"  data-dismiss="modal" data-placement="bottom"data-tt="tooltip" title="Close">
+							<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
+					</a>
+				</div>	
           	</div>
 
         </div>
@@ -360,15 +341,21 @@
 			{% endverbatim %}
           	</div>
           	<div class="modal-footer">
-          		<a class="btn icon-btn btn-default"  ng-click="" data-placement="bottom"data-tt="tooltip" title="Go to Languages">
-						<span class="glyphicon btn-glyphicon glyphicon-comment img-circle"></span>					
-				</a>
-          		<a class="btn icon-btn btn-default" ng-click="save_add_lang()" data-placement="bottom"data-tt="tooltip" title="Save">
-					<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
-				</a>
-				<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
-						<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
-				</a>
+          		<div style="display:inline">
+	          		<a class="btn icon-btn btn-default"  ng-click="" data-placement="bottom"data-tt="tooltip" title="Go to Languages">
+							<span class="glyphicon btn-glyphicon glyphicon-comment img-circle"></span>					
+					</a>
+				</div>
+				<div style="display:inline">
+	          		<a class="btn icon-btn btn-default" ng-click="save_add_lang()" data-placement="bottom"data-tt="tooltip" title="Save">
+						<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
+					</a>
+				</div>
+				<div style="display:inline">
+					<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
+							<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
+					</a>
+				</div>
           	</div>
 
         </div>
