Se esta trabajando con los ace editor para que sean instancias independientes para poder manejar el ctrl+z

--- a/2_rndr.tmpl
+++ b/2_rndr.tmpl
@@ -3,4 +3,4 @@ ORM
 
 [@ DAL/dao 1-936091e3-aa77-7566 @] [@ UI/abm 2-40cc9bc4-b9de-be66 @] 
 
-[@ UI/abm 2-40cc9bc4-b9de-be66 @] 
+[@ UI/abm 2-40cc9bc4-b9de-be66 @] snippet
